# rhythm

./: .gitignore  README.md
.github/workflows/: release.yml
Sources/RhythmApp/: MenuBarView.swift  OverlayManager.swift  RhythmApp.swift  RhythmBrand.swift
Sources/RhythmCore/: Persistence.swift
Sources/RhythmTDD/: main.swift
docs/: V1-design.md
macos/: Package.swift  README.md
macos/Sources/RhythmApp/: AppModel.swift  LaunchAtLoginManager.swift  LockMonitor.swift  MenuBarView.swift  OverlayManager.swift  RhythmApp.swift  RhythmBrand.swift
macos/Sources/RhythmCore/: Persistence.swift  TimerEngine.swift
macos/Sources/RhythmTDD/: main.swift
macos/assets/: Rhythm.icns
macos/docs/: V1-design.md
macos/scripts/: package_dmg.sh
windows/: Cargo.toml  DEV_GUIDE.md  README.md  plan.md
windows/installer/: rhythm-win.iss
windows/scripts/: package_win.ps1
windows/src/: config.rs  main.rs  session.rs  timer_engine.rs  ui.rs
windows/src/platform/: autostart.rs  lock_monitor.rs  mod.rs  overlay.rs
