[package]
name = "rhythm-win"
version = "0.1.0"
edition = "2021"
description = "Windows native rhythm reminder powered by Rust"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = true, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
directories = "5"
eframe = { version = "0.29", default-features = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_System_RemoteDesktop",
  "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
